add drop-menu, social box and animations

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,6 @@ img {
 .container {
   max-width: 1200px;
   margin: auto;
-  overflow: hidden;
 }
 
 /* Navigation */
@@ -73,14 +72,19 @@ img {
   top: 0;
   left: 0;
   z-index: -1;
-  opacity: 0.2;
+  opacity: 0;
+  transition: opacity 0.6s ease-in-out;
+}
+
+#navbar:hover::before {
+  opacity: 0.5;
 }
 
 #navbar .navbar-content {
   display: grid;
   justify-content: center;
   align-items: center;
-  padding: 1rem 2rem;
+  padding: 1rem 2rem 0 2rem;
 }
 
 #navbar .navbar-content .logo {
@@ -97,22 +101,108 @@ img {
   letter-spacing: 1rem;
 }
 
-#navbar .navbar-content .navigation ul {
+#navbar .navbar-content .navigation .nav-list {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-#navbar .navbar-content .navigation li a {
+#navbar .navbar-content .navigation .nav-list li {
+  position: relative;
+  text-align: left;
+  padding-bottom: 1rem;
+}
+
+#navbar .navbar-content .navigation .nav-list li a {
   color: #fff;
   padding: 0.3rem 2rem;
   font-size: 1.4rem;
   font-family: var(--heading-font);
   background: inherit;
+  transition: color 0.4s ease-in-out;
+  display: block;
 }
 
-
-#navbar .navbar-content .navigation li a:hover {
+#navbar .navbar-content .navigation .nav-list li a:hover {
   color: var(--secondary-color);
 }
+
+/* Nested Lists */
+#navbar .navbar-content .navigation .nav-list li .nav-sublist {
+  display: none;
+}
+
+#navbar .navbar-content .navigation .nav-list li:hover .nav-sublist {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: 0;
+  margin-top: 1rem;
+  animation: sublist-materialize 0.4s ease-in-out forwards;
+}
+
+#navbar .navbar-content .navigation .nav-list li .nav-sublist li {
+  padding-bottom: 0;
+  /* removes padding of .nav-list li */
+}
+
+#navbar .navbar-content .navigation .nav-list li .nav-sublist li a {
+  display: block;
+  /* makes a streth all the way across */
+}
+
+@keyframes sublist-materialize {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+#navbar .navbar-content .navigation .nav-list li .nav-sublist::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: var(--dark-color);
+}
+
+#navbar .navbar-content .navigation .nav-list li:hover .nav-sublist::before {
+  animation: sublist-background-materialize 0.8s ease-in-out forwards;
+}
+
+@keyframes sublist-background-materialize {
+  0% {
+    opacity: 0;
+  }
+  
+  100% {
+    opacity: 0.5;
+  }
+}
+
+
+#navbar .navbar-content .navigation .nav-list li .nav-sublist li::before {
+  content: "";
+  background: var(--dark-color);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+
+#navbar .navbar-content .navigation .nav-list li .nav-sublist li:hover::before {
+  opacity: 0.3;
+}
+
 
 /* Showcase */
 #showcase {
@@ -124,4 +214,46 @@ img {
   width: 100%;
   height: 100%;
   background: url('../img/mma-hero-image.jpg') no-repeat center center/cover;
+}
+
+/* Social Box */
+.social-box {
+  display: inline-flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  padding: 1rem;
+  color: var(--light-color);
+  position: fixed;
+  top: 35vh;
+  left: 0;
+}
+
+.social-box::before {
+  content: "";
+  background: var(--dark-color);
+  border-radius: 0 10px 10px 0;
+  border: 1px solid var(--secondary-color);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 0;
+  transition: all 1s ease-in-out;
+}
+
+.social-box:hover::before {
+  opacity: 0.3;
+}
+
+.social-box i {
+  padding: 0.5rem 0;
+  color: var(--primary-color);
+  transition: color 0.4s ease-in-out; 
+}
+
+.social-box i:hover {
+  color: var(--secondary-color)
 }
