force white logo

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,129 @@ img {
   margin: auto;
 }
 
+.card {
+  padding: 1rem;
+  display: grid;
+  grid-gap: 1.5rem;
+  grid-template-rows: 30rem;
+  margin-bottom: 3rem;
+}
+
+.card p {
+  font-family: var(--main-font);
+  font-size: 1.2rem;
+}
+
+.card h3 {
+  margin-bottom: 0.5rem;
+}
+
+.card .text {
+  background: #222;
+  padding: 1rem;
+  overflow: hidden;
+  color: #fff;
+  border-radius: 0.2rem;
+}
+
+.card .image {
+  filter: grayscale(75%);
+  border-radius: 0.2rem;
+}
+
+.separator {
+  display: block;
+  background: #bbb;
+  height: 1px;
+  width: 50%;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+}
+
+.separator-container {
+  display: flex;  
+}
+
+.flex-right {
+  justify-content: flex-end;
+  padding-right: 1rem;
+}
+
+.section-intro {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  margin-bottom: 1.5rem;
+}
+
+.flex-reverse {
+  flex-direction: row-reverse;
+}
+
+.intro-icon {
+  width: 70px;
+  margin-right: 1rem;
+}
+
+.intro-title {
+  font-size: 4rem;
+  margin-bottom: 0;
+  line-height: 0.72;
+  padding: 0;
+} 
+
+.badge {
+  display: inline-block;
+  font-family: var(--signature-font);
+  padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
+  background: var(--primary-color);
+  color: white;
+  border-radius: 0.2rem;
+}
+
+.btn {
+  display: block;
+  text-align: center;
+  background: var(--dark-highlight-color);
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+  font-family: var(--main-font);
+  font-weight: bold;
+  font-size: 1.2rem;
+  border-radius: 3rem;
+  transition: 0.3s ease-in-out;
+}
+
+.btn:hover {
+  border: 1px solid #fff;
+  color: #fff;
+}
+
+.secondary {
+  color: var(--secondary-color);
+}
+
+.primary {
+  color: var(--primary-color);
+}
+
+.bg-primary {
+  background: var(--primary-color);
+}
+
+.center {
+  text-align: center;
+}
+
+.italic {
+  font-style: italic;
+}
 /* Navigation */
+.logo title {
+  color: #fff !important;
+}
+
 #navbar {
   color: var(--light-color);
   text-align: center;
@@ -61,6 +183,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 10;
 }
 
 #navbar::before {
@@ -208,6 +331,7 @@ img {
 #showcase {
   height: 100vh;
   background: #444;
+  margin-bottom: 4rem;
 }
 
 #showcase .hero-image {
@@ -257,3 +381,241 @@ img {
 .social-box i:hover {
   color: var(--secondary-color)
 }
+
+/* About */
+#about .grid {
+  grid-template-columns: 2fr 4.5fr 2fr;
+}
+
+#about .about-center {
+  background: url("/img/mma-about.jpg") no-repeat center center/cover;
+  border-radius: 0.2rem;
+}
+
+/* Schedule */
+#schedule .grid {
+  grid-template-columns: 6.5fr 2fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+#schedule .schedule-left {
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 2;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-gap: 1.5rem;
+}
+
+#schedule .schedule-right {
+  grid-column: 2 / span 1;
+  grid-row: 1 / span 1;
+}
+
+#schedule .schedule-bottom {
+  grid-column: 2 / span 1;
+  grid-row: 2 / span 1;
+  background: url('/img/mma-technique.jpg') no-repeat center center/cover;
+}
+
+#schedule .schedule-left .image {
+  background: url('/img/mma-schedule.jpg') no-repeat center center/cover;
+  border-radius: 0.2rem;
+}
+
+#schedule .schedule-content h3 {
+  margin-bottom: 0rem;
+}
+
+#schedule .schedule-left .schedule-content p {
+  margin-bottom: 3rem;
+  border-bottom: 1px dotted var(--dark-highlight-color);
+}
+
+#schedule .schedule-content p:last-child {
+  margin-bottom: 0;
+}
+
+#schedule .schedule-right p {
+  margin-bottom: 0.5rem;
+}
+
+#schedule .schedule-right h3 {
+  margin-bottom: 0.2rem;
+}
+
+#schedule .badge.btn {
+  margin-bottom: 0;
+}
+
+
+/* Join */
+#join .grid {
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+}
+
+#join .form-grid {
+  display: grid;
+  grid-template-areas: 
+  "form-top form-top"
+  "form-left form-right"
+  "form-bottom form-bottom";
+  background: #bbb;
+  color: var(--dark-color);
+  padding: 1rem;
+  border-radius: 0.2rem;
+  margin: 1rem 0;
+}
+
+.form-top {
+  grid-area: form-top;
+  justify-self: center;
+}
+
+.form-left {
+  grid-area: form-left;
+}
+
+.form-right {
+  grid-area: form-right;
+}
+
+.form-bottom {
+  grid-area: form-bottom;
+  padding-bottom: 0;
+  justify-self: center;
+}
+
+#join .join-right {
+  background: url("/img/mma-join.jpg") no-repeat center center/cover;
+  border-radius: 0.2rem;
+}
+
+
+#join label,
+#join input,
+#join p {
+  display: block;
+  font-family: var(--main-font);
+  margin-bottom: 0.2rem;
+  font-size: 1.3rem;
+}
+
+#join p {
+  padding: 0;
+  margin-bottom: 0.6rem;
+}
+
+#join input,
+footer input {
+  border-radius: 0.2rem;
+  border-style: none;
+  padding: 0.4rem 0.5rem;
+  margin-bottom: 1.5rem;
+}
+
+#join input:focus {
+  outline: none;
+}
+
+#join .submit {
+  margin-bottom: 0;
+  border-radius: 3rem;
+  font-weight: bold;
+  border: 1px solid var(--secondary-color);
+  padding: 0.5rem 1rem;
+}
+
+#join .submit:hover {
+  cursor: pointer;
+  border: #fff 1px solid;
+}
+
+#join .radio {
+  display: inline-block;
+}
+
+/* Footer */
+#main-footer {
+  background: #222;
+  padding: 1rem;
+  overflow: hidden;
+  color: #fff;
+}
+
+#main-footer .footer-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, auto);
+  grid-gap: 2rem;
+  padding: 2rem 0;
+}
+
+.footer-grid .footer-logo {
+  width: 7rem;
+}
+
+.footer-grid .copyright {
+  grid-column: 1 / span 4;
+  grid-row: 2 / span 1;  
+  display: block;
+  width: 100%;
+  padding: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+  justify-self: center;
+  text-align: center;
+  background: #333;
+}
+
+#main-footer input {
+  border-radius: 0.2rem;
+  border-style: none;
+  padding: 0.4rem 0.5rem;
+  margin-bottom: 1rem;
+  border: 1px solid var(--secondary-color);
+}
+
+#main-footer input:focus {
+  outline: none;
+}
+
+#main-footer .btn {
+  border-radius: 3rem;
+  padding: 0.5rem 1rem;
+}
+
+#main-footer .btn:hover {
+  cursor: pointer;
+  border: #fff 1px solid;
+}
+
+#main-footer .footer-grid p {
+  margin-bottom: 0.3rem;
+  font-family: var(--main-font);
+  line-height: 1.4;
+  font-size: 1rem;
+}
+
+#main-footer .footer-grid ul {
+  padding: 0.5rem 0;
+}
+
+#main-footer .footer-grid li a {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-family: var(--main-font);
+  line-height: 1.4;
+  font-size: 1rem;
+}
+
+#main-footer a.btn {
+  display: inline-block;
+  color: var(--secondary-color)
+}
+
+#main-footer a.btn:hover {
+  display: inline-block;
+  color: var(--light-color);
+}
+
